# mnist

./: .gitignore  .pyproject.toml.swp  Dockerfile  README.md  pyproject.toml
note/: Images.ipynb  mnist984.keras  mnistp.ipynb
src/mnist/: .model.py.swp  .worker.py.swp  db.py  main.py  model.py  worker.py
tests/: test_worker.py
